--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@mdn/browser-compat-data": "^7.1.14",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "node-fetch": "^3.3.2"
+    "express": "^5.1.0"
   }
 }
